<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Сборщик заявок</string>
    <string name="action_settings">Настройки</string>
    <string name="hello_world1">Это приложение позволит вам работать с заявками:</string>
    <string name="hello_world2"> - создавать их;</string>
    <string name="hello_world3"> - редактировать;</string>
    <string name="hello_world4"> - удалять.</string>
    <string name="hello_world5">Но для начала работы надо загрузить в приложение данные, воспользовавшись пунктом ПОЛУЧЕНИЕ ДАННЫХ  в меню активности СПИСОК ЗАЯВОК </string>
    
    <string name="download_SD">Скачать данные с SD-карты</string>
    <string name="download_mail">Скачать данные, используя почту</string>
    <string name="download_cloud">Скачать даннные с Dropbox</string>
    <string name="download_SD_secondary">Файл для скачки должен лежать на sd-карте</string>
    <string name="download_mail_secondary">Файл берется из письма во входящих</string>
    <string name="download_cloud_secondary">Берется файл с Dropbox</string>
    
    <string name="unload_SD">Выгрузить данные на SD-карты</string>
    <string name="unload_mail">Выгрузить данные, используя почту</string>
    <string name="unload_cloud">Выгрузить даннные в Dropbox</string>
    <string name="unload_SD_secondary">Данные будут сохранены в "request.xml"</string>
    <string name="unload_mail_secondary">"request.xml" будет отправлен письмом</string>
    <string name="unload_cloud_secondary">Данные будут сохранены в "request.xml"</string>
    
    <string name="load_previous_data">Load previous data</string>
    <string name="browse">Обзор</string>
    <string name="open">Открыть</string>
    <string name="connect">Соединить</string>
    <string name="some_hint_path">Путь&#8230;</string>
    <string name="some_hint_login">Логин&#8230;</string>
    <string name="some_hint_password">Пароль&#8230;</string>
    <string name="title_activity_about">О программе</string>
    <string name="title_activity_sd">Работа с SD-картой</string>
    <string name="title_activity_cloud">Работа с Dropbox</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_list_request">Список заявок</string>
    <string name="activity_see_no_items"></string>
    <string name="label_date">Дата</string>
    <string name="label_provider">Покупатель</string>
    <string name="label_allCost">Общая стоимость</string>
    <string name="label_products">Продукты</string>
    <string name="label_products_name">Имя</string>
    <string name="label_products_price">Цена</string>
    <string name="label_products_amount">Количество</string>
    <string name="ofd_title">Открыть файл</string>
    <string name="ofd_go_up_text">Назад</string>
    <string name="errorTitleEmptyField">Пустое поле</string>
    <string name="errorMessageEmptyField">Вам необходимо указать файл в поле "Путь"</string>
    <string name="errorMessageEmptyFields">Вам необходимо заполнить все поля</string>
    <string name="errorTitleIsNotFile">Не xml файл</string>
    <string name="errorMessageIsNotFile">Вам необходимо указать xml файл в поле "Путь"</string>
    <string name="errorTitleFileNotExist">Нет такого файла</string>
    <string name="errorMessageFileNotExist">Вам необходимо указать существующий файл в поле "Путь"</string>
    <string name="errorButton">Ок</string>
    <string name="errorButtonYes">Да</string>
    <string name="errorButtonNo">Нет</string>
    <string name="errorTitleDelete">Удаление заявки</string>
    <string name="errorMessageDeleteRequest">Вы уверены, что хотите удалить заявку?</string>

    <string-array name="cloud_array">
        <item>Dropbox</item>
    </string-array>

    	<string name="download_name">Получение данных</string>
    <string name="title_activity_add_edit_request">Добавление/Редактирование заявки</string>
    <string name="title_activity_upload">Выгрузка заявок</string>
    <string name="title_activity_view_request">Просмотр заявки</string>
    <string name="title_activity_choose_provider">Выбор покупателя</string>
    <string name="title_activity_choose_product">Выбор товара</string>
    <string name="title_activity_mail">MailActivity</string>

</resources>
