<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" xmlns:android1="http://schemas.android.com/apk/res/android">

    <Button
        android1:id="@+id/download_SD"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentTop="true"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="15dp"
        android1:text="@string/download_SD" />

    <Button
        android1:id="@+id/download_cloud"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/download_SD"
        android1:layout_below="@+id/download_SD"
        android1:layout_marginTop="16dp"
        android1:text="@string/download_cloud" />

    <Button
        android1:id="@+id/button_load_previous_data"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/download_cloud"
        android1:layout_below="@+id/download_cloud"
        android1:layout_marginTop="17dp"
        android1:text="@string/load_previous_data" />

</RelativeLayout>
