<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SDActivity" >

    <EditText
        android:id="@+id/editText_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="#dddddd"
        android:ems="10"
        android:hint="@string/some_hint_path"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_browse"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText_path"
        android:layout_below="@+id/editText_path"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_round"
        android:text="@string/browse" />

    <Button
        android:id="@+id/button_open_sd_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_path"
        android:layout_alignRight="@+id/button_browse"
        android:layout_below="@+id/button_browse"
        android:layout_marginTop="90dp"
        android:background="@drawable/button_round"
        android:text="@string/open" />

</RelativeLayout>